--- a/data-scraper/package.json
+++ b/data-scraper/package.json
@@ -8,9 +8,10 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
-      "typeorm": "0.2.25",
+      "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
-      "mysql": "^2.14.1"
+      "sitemap-stream-parser": "^1.7.0",
+      "typeorm": "0.2.25"
    },
    "scripts": {
       "start": "ts-node src/index.ts"
