--- a/data-scraper/package.json
+++ b/data-scraper/package.json
@@ -8,6 +8,7 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
+      "amqplib": "^0.5.6",
       "inversify": "^5.0.1",
       "mysql": "^2.14.1",
       "open-graph-scraper": "^3.6.2",
