--- a/data-scraper/package.json
+++ b/data-scraper/package.json
@@ -9,7 +9,9 @@
    },
    "dependencies": {
       "amqplib": "^0.5.6",
+      "axios": "^0.19.2",
       "inversify": "^5.0.1",
+      "lodash": "^4.17.15",
       "mysql": "^2.14.1",
       "open-graph-scraper": "^3.6.2",
       "reflect-metadata": "^0.1.13",
