--- a/data-scraper/package.json
+++ b/data-scraper/package.json
@@ -18,6 +18,7 @@
       "mysql": "^2.14.1",
       "open-graph-scraper": "^3.6.2",
       "parse-open-graph": "^0.4.0",
+      "perfect-logger": "^2.0.1",
       "reflect-metadata": "^0.1.13",
       "request-promise": "^4.2.5",
       "sitemap-stream-parser": "^1.7.0",
