integrated scrape-html class into the app

--- a/data-scraper/package.json
+++ b/data-scraper/package.json
@@ -15,6 +15,8 @@
       "get-hrefs": "^4.0.0",
       "inversify": "^5.0.1",
       "lodash": "^4.17.15",
+      "md5": "^2.2.1",
+      "microdata-node": "^2.0.0",
       "mysql": "^2.14.1",
       "open-graph-scraper": "^3.6.2",
       "parse-open-graph": "^0.4.0",
