--- a/data-scraper/package.json
+++ b/data-scraper/package.json
@@ -8,6 +8,8 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
+      "@google-cloud/storage": "^5.1.1",
+      "@google-cloud/vision": "^2.1.0",
       "amqplib": "^0.5.6",
       "axios": "^0.19.2",
       "cheerio": "^1.0.0-rc.3",
@@ -27,6 +29,7 @@
       "typeorm": "0.2.25"
    },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/index.ts",
+      "set-var": "export GOOGLE_APPLICATION_CREDENTIALS=\"google-vision-avail.json\""
    }
 }
