add queue for images analize

--- a/data-scraper/package.json
+++ b/data-scraper/package.json
@@ -12,9 +12,12 @@
       "@google-cloud/vision": "^2.1.0",
       "amqplib": "^0.5.6",
       "axios": "^0.19.2",
+      "bluebird": "^3.7.2",
       "cheerio": "^1.0.0-rc.3",
       "crawler": "^1.2.2",
+      "fs": "0.0.1-security",
       "get-hrefs": "^4.0.0",
+      "image-downloader": "^4.0.1",
       "inversify": "^5.0.1",
       "lodash": "^4.17.15",
       "md5": "^2.2.1",
